--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -143,7 +143,6 @@ th {
 .table-striped>tbody>tr:nth-child(odd)>td,
 .table-striped>tbody>tr:nth-child(odd)>th {
   background-color: var(--silant-color-biege-a);
-
 }
 .table-striped td {
   font-size: 0.8rem;
@@ -153,17 +152,20 @@ td, tr {
     border-bottom: none;
 }
 .table-striped>tbody tr:hover>td {
-
   color: var(--silant-color-blue);
   /*transition: ease-out 1s;*/
   cursor: pointer;
-
-
 }
 .table-striped>tbody tr:hover {
   /*transform: scale(1.01);*/
   background-color: #cec6ae;
   transition: ease-out .3s;
+}
+th.asc::after {
+  content: "▲";
+}
+th.desc::after {
+  content: "▼";
 }
 
 
